--- a/style.css
+++ b/style.css
@@ -1,12 +1,15 @@
 body {
-
+background: #c4e5f6;
 }
  .container {
-
+width: 960px;
+text-align: center;
+background: #ffffff;
+margin: auto;
  }
  .header-icons {
 
  }
  .weather-pics {
-   
+
  }
